# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/config.gni")
import("//build/config/android/rules.gni")
import("//mojo/public/tools/bindings/mojom.gni")

android_library("contacts") {
  java_files = [
    "org/domokit/contacts/ContactsServiceImpl.java",
  ]

  deps = [
    "//mojo/public/java:bindings",
    "//mojo/public/java:system",
    ":interfaces_java",
  ]
}

mojom("interfaces") {
  sources = [
    "contacts.mojom",
  ]
}
